[FIX] Calendar style was overflowing on certain conditions

--- a/packages/ng/src/plugins/ngMaterial/_datepicker.scss
+++ b/packages/ng/src/plugins/ngMaterial/_datepicker.scss
@@ -19,6 +19,8 @@
 // CALENDAR
 .mat-calendar {
 	width: 296px;
+	height: auto !important;
+	min-height: 355px !important;
 	.mat-button {
 		@extend .button.mod-flat;
 	}
